--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: "Jekyll Resume Template"
+title: "@mrexojo - Miguel R"
 description: "A resume template for Jekyll and GitHub Pages sites."
 
 # Build settings
