--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,10 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Master of Science, Computer Science
+  uni: University of Southern California
+  year: Expected May 2019
+  summary: GPA 3.93
 
-- degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+- degree: Bachelor of Science, Computer Science and Technology
+  uni: Renmin University of China
+  year: 2013 &mdash; 2017
+  summary: GPA 3.73
