--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,15 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: Meritorious Winner
+  organization: The Interdisciplinary Contest in Modeling
+  year: Apr, 2016
+  summary: Predicted the Refugee migration flow from the Middle East to Europe.
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+- award: 1st Scholarship for Outstanding Academic Performance
+  organization: Renmin University of China
+  year: Sept,2014 &mdash; Sept, 2015
+#  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+
+- award: Excellent Volunteer Teacher
+  organization: Volunteer Teaching Association, Renmin University of China
+  year: Mar, 2014 &mdash; Jun, 2014
+#  summary: Voted Most Likely To Succeed by a panel of my high school peers.
