--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,25 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
+- company: Nordstromrack | Hautelook
+  position: Software Engineer Intern
+  duration: Jun, 2018 &mdash; Present
+  summary: <ul class="resume-item-list"><li>Built APIs using Play-Scala framework that process product description text, via regular expression matching, Part-of-speech Tagging and Named Entity Recognition.</li><li>Updated solr documents of all sellable women heels using the APIs above.</li><li>Developed a Google Assistant app supporting vocal search for products, events and store information.</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
+- company: Sohu Inc.
+  position: Software Engineer Intern
+  duration: Mar, 2017 &mdash; Jul, 2017
+  summary: <ul class="resume-item-list"><li>Predicted stock trends weekly by analyzing the sentiment of financial reviews using sentiment lexicon.</li><li> Implemented web services for image and article quality evaluation. Used Recurrent Neural Network with LSTM-unit for text analysis; LBP,CCV,EHD,GLCM features and Neural Networks for image analysis.</li></ul>
 
+- company: Baidu Inc.
+  position: Software Engineer Intern
+  duration: Mar, 2016 &mdash; July, 2016
+  summary: <ul class="resume-item-list"><li>Refactored manual-collected indoor Point-of-Interest relating module, improved performance and stability.</li><li>Modified the module for mining possible unlabeled Point-of-Interest from the 50 million level map database, improved accuracy and invented new filter strategies.</li><li>Enhanced the weekly competitor analysis with Tencent Map and AMap by modifying data fetching strategies and retrained the word segmentation model.</li></ul>
 
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+- company: Big Data &amp; Artificial Intelligence Lab, Renmin University of China
+  position: Research Assistant
+  duration: Dec, 2015 &mdash; Sep, 2016
+  summary: <ul class="resume-item-list"><li>Researched a series of Convolutional Neural Network structures &#58; CNN, Spatial Pyramid Pooling&mdash;Net, Region-based CNN, Fast Region-based CNN and Faster Region-based CNN.</li><li>Participated in Large Scale Visual Recognition Challenge 2016, enhanced Faster R-CNN module for object detection by utilizing the contextual information of the video.</li></ul>
+
+- company: Natural Language Processing Lab, Tsinghua University
+  position: Research Assistant
+  duration: Sept, 2016 &mdash; May, 2017
+  summary: <ul class="resume-item-list"><li>Researched and studied DeepWalk and SimRank algorithms.</li><li>Implemented a recurrent neural network language model (LSTM unit) that classifies the discourse relation and generates pair-wise possibility that is used for sentence ordering.</li></ul>
