--- a/_data/associations.yml
+++ b/_data/associations.yml
@@ -1,15 +1,21 @@
 # Associations
 # comment out the urls if you do not wish to display them
 
-- organization: PETA
-  role: Volunteer
-  year: 2001 &mdash; 2010
-  url: https://www.peta.org/
-  summary: Organized fund drives and participated in fundraising events for the benefit of PETA's local Springfield operations.
+- organization: Computer Science Club
+  role: President
+  year: 2016 &mdash; 2018
+  url: https://github.com/leestanley/gabcompsci
+  summary: Organized weekly meetings and introduced over 100 students to varying computer science topics. Webmaster for gabcompsci.me and Secretary for 16/17 year.
 
+- organization: Speech and Debate 
+  role: 4-Year Member
+  year: 2014 &mdash; 2018
+  url: https://gabrielino.sgusd.k12.ca.us/apps/pages/index.jsp?uREC_ID=925359&type=d&pREC_ID=955651
+  summary: Member of the Gabrielino Screaming Eagles for four years. Led the Public Forum debate event for my senior year; I created weekly debate schedules and prepared evidence for monthly debate topics. 
+  
 
-- organization: Yale Amnesty International
-  role: Communications coordinator
-  year: 2002 &mdash; 2004
-  url: http://campuspress.yale.edu/amnesty/
-  summary: During my junion and senior years at Yale, I was actively involved in Yale Amnesty International where I helped facilitate our student organization communications through website maintenance, writing for our campus publication, and graphic design of related materials.
+- organization: FBLA-PBL
+  role: 2-Year Member
+  year: 2016 &mdash; 2018
+  url: https://www.fbla-pbl.org/
+  summary: Member of the Gabrielino FBLA-PBL organization for two years. Competed in Emerging Business Issues my senior year, placing 1st place in California and 3rd in the nation. 
