--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,13 +1,13 @@
 # Degree
-- degree: Bachelor of Arts, Human Rights
-  uni: Yale University
-  year: 2004 &mdash; 2008
-  awards:
-    - award: Summa Cumme Laude graduate
-  summary: If you had any meaningful roles at college, feel free to write about them here
+- degree: Bachelor of Arts, Data Science
+  uni: University of California San Diego
+  year: 2018 &mdash; 2022
+#  awards:
+#    - award: Summa Cumme Laude graduate
+#  summary: If you had any meaningful roles at college, feel free to write about them here
 
 - degree: High School Diploma
-  uni: Springfield High School
-  year: 2004
-  award: Most likely to succeed
-  summary: You can choose to have either a single or multiple awards
+  uni: Gabrielino High School
+  year: 2018
+#  award: Most likely to succeed
+#  summary: You can choose to have either a single or multiple awards
