--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_contact_address:         "742 Evergreen Terrace, Springfield"
 resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 display_header_contact_info:    "false"
 
-resume_header_intro: "<p>I am a current Data Science student at University of California San Diego. I am currently interested in front-end development with a specialization in data visualizaiton.</p>"
+resume_header_intro: "<p>I am a current Data Science student at University of California San Diego. I am currently interested in front-end development with a specialization in data visualization.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
