--- a/_data/recognitions.yml
+++ b/_data/recognitions.yml
@@ -1,10 +1,15 @@
 # Recognitions
-- award: Outstanding Achievement
-  organization: Springfield Young Professionals
-  year: 2010, 2014
-  summary: Awarded the Outstanding Achievement award for contributions made to the community and professional accomplishments.
+- award: Academic All American
+  organization: National Speech and Debate Association
+  year: 2018
+  summary: The Academic All American award recognizes students who have earned the degree of Superior Distinction; completed at least 5 semesters of high school; demonstrated outstanding character and leadership; and earned a GPA of 3.7 on a 4.0 scale.
+    
+- award: Oratorical Contest Club Champion
+  organization: Los Angeles Envision Lions Club
+  year: 2017 &mdash; 2018
+  summary: Champion of Lions Club first round oratorical contest two years in a row. Competitors prepared speeches on legal topics for scholarship prizes. 
 
-- award: Most Likely To Succeed
-  organization: Springfield High School
-  year: 2004
-  summary: Voted Most Likely To Succeed by a panel of my high school peers.
+# - award: Oratorical Contest Club Champion
+  # organization: Los Angeles Envision Lions Club
+  # year: 2017 &mdash; 2018
+  # summary: Champion of Lions Club first round oratorical contest two years in a row. Competitors prepared speeches on legal topics for scholarship prizes. 
