--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@ resume_title:                   "Software Developer && Hacker"
 resume_contact_email:           "ian.cohee@gmail.com"
 
 # the next two items are used for schema itemprops in _layouts/resume.html
-resume_contact_telephone:       "970 . 308 . 5984 ."
+resume_contact_telephone:       "970 . 308 . 5984"
 resume_contact_address:         "Fort Collins, Colorado"
 
 resume_header_contact_info:     "Fort Collins, Colorado • 308 6984 • ian.cohee@gmail.com"
 display_header_contact_info:    "true"
 
-resume_header_intro: "<p>I am driven by curiosity and am constantly learning. I value dedication to detail and strive to create exellent software. I enjoy studying each discipline of computer and network security</p>"
+resume_header_intro: "<p>Please be patient, as this page is currently under construction.</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
 # or remove the resume_looking_for_work option entirely
 # to leave blank
-resume_looking_for_work:        "no"
+resume_looking_for_work:        "yes"
 
 # Decide which sections to use
 # comment out to hide
