replace skills with projects

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -21,6 +21,7 @@
     - Contributed to the open source Experiments Framework <a href="https://github.com/shopify/verdict">Verdict</a>
     - Developed applications using Linux, React, Rails, MySql stack
     - Used operational tools such as ModeAnalytics, Splunk and Datadog to generate stakeholder reports
+    - Made it to the final round of internal company Hack Days
 
 - company: Microsemi
   position: Software Engineer
