--- a/_data/education.yml
+++ b/_data/education.yml
@@ -8,14 +8,13 @@
   list:
     - Control Systems Specialization
     - Nortel Networks Scholarship
-    - Dean's Honor List
-    - 2018 Ontario Engineering Programming Competition Director
+    - Dean's Honor List (4 years running)
 
 - degree: International Baccalaureate Diploma
   uni: Michael Power St. Josephs
   year: 2010 &mdash; 2014
   summary: >
-    Specialized in History and Physics in this academically intensive and globally recognized program. Participated in
+    Specialized in History and Chemistry in this academically intensive and globally recognized program. Participated in
     student ventures such as Free The Children, and Duke of Edinburgh Award
   list:
     - Completed 3 University Level Courses
