--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -18,7 +18,7 @@
     and deploy a realtime trading algorithm.
 
 - project: Dataland
-  role: hacker
+  role: Hacker
   url: https://github.com/NikhilPeri/data-land
   duration: May 2018 &mdash; Present
   description:
