--- a/_data/interests.yml
+++ b/_data/interests.yml
@@ -1,4 +1,4 @@
 # Interests
 - description: Human rights and world affairs
-- description: Music (baritone saxiphonist)
-- description: Linguistics
+- description: Music <ul class="resume-item-list"><li>bagpipes</li><li>guitar</li><li>bass guitar</li><li>contrabass</li></ul>
+- description: Linguistics <ul class="resume-item-list"><li>Ein bisschen Deutsch (German)</li><li>немного по русски (Russian)</li></ul>
