--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,19 +1,12 @@
 # Jobs
-# VP of Global Communications
-- company: Springfield International Human Rights Outreach
-  position: VP of Global Communications
-  duration: Oct, 2013 &mdash; Present
-  summary: Write about your core competencies in one or two sentences describing your position. If you held the position for a long time, it could be a longer section, including a couple bullet points	<ul class="resume-item-list"><li>A project you are proud of</li><li>Another awesome project</li><li>or a team or department you worked with</li></ul>
 
-# Director of Digital Stratgy
-- company: United Nations Human Rights Council
-  position: Director of Digital Strategy
-  duration:  Jun, 2010 &mdash; Sept, 2013
-  summary: If your stint was shorter, feel free to be brief and just call out the most meaningful points of your role. Be concise, and be meaninful. The person reading just needs enough to want to talk to you more about your experience.
-
-
-# Communications Coordinator
-- company: Springfield Women & Children's Center
-  position: Communications Coordinator
-  duration:   Jun, 2008  &mdash; May, 2010
-  summary: Led communication efforts across digital and traditional media channels for marketing and public relations, internal communication strategies, and coordinated support programs for the recipients of the center's services.
+# Software Developer
+- company: Secure64 Software Corporation
+  position: Software Developer
+  duration: Sep, 2014 &mdash; Present
+  summary: I perform various software design, implementation, and testing tasks. <ul class="resume-item-list"><li>Domain knowledge in technical and operational aspects of the DNS.</li><li>Designed and implemented several ReSTful APIs.</li></ul>
+ 
+- company: Penetration Tester (contracted)
+  position: Lead Tester
+  duration: Three consecutive years, from 2014 to 2016
+  summary: Developed and executed security-related tests for the federal government's NASA <a href="https://techport.nasa.gov">TechPort</a> system. 
