lets get this money

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ resume_looking_for_work:        'yes'
 # comment out to hide
 resume_section_experience:      true
 resume_section_education:       true
-resume_section_skills:          false
+resume_section_skills:          true
 resume_section_projects:        true
 resume_section_recognition:     false
 resume_section_links:           false
