--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,14 +1,14 @@
-- degree: BASc. Electrical Engineering, BSc Computing Technology
+- degree: BASc. Electrical Engineering and BSc Computing Technology
   uni: University of Ottawa
-  year: 2014 &mdash; Present
+  year: Sept. 2014 &mdash; May 2019
   summary: >
     Actively involved with the Centre for Entrepreneurship and Engineering Design working on various engineering projects,
     Most notably team captain of uOttawa Rocketry, an interdisciplinary engineering team competing in the international
     Spaceport America Cup.
   list:
-    - Control Systems Specialization
+    - Dean's Honor List
     - Nortel Networks Scholarship
-    - Dean's Honor List (4 years running)
+    - Control Systems Specialization
 
 - degree: International Baccalaureate Diploma
   uni: Michael Power St. Josephs
