--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -5,9 +5,10 @@
     Worked on the Discovery Team responsible for delivering recommendations to customers of various Shopify products.
     Specifically focused on matching algorithms to help shop owners find contract professionals.
   list:
-    - Deployed a Tensorflow ensemble linear model to produce recommendations based on multiple training signals
-    - Debugged and resolved data extraction issues used in our core batch processing pipelines
+    - Deployed an ensemble linear model to produce recommendations based on multiple positive and negative user behaviour signals
     - Responsible for building modeled datasets from raw data using Apache Spark
+    - Developed a realtime microservice for querying trained Tensorflow Models with offline and online features
+    - Debugged and resolved data extraction issues used in our core batch processing pipelines
 
 - position: Backend Developer
   duration: Jan, 2017 &mdash; April, 2018
