--- a/_config.yml
+++ b/_config.yml
@@ -15,12 +15,11 @@ resume_contact_email:           'nperi104@uottawa.ca'
 resume_contact_telephone:       '613-265-9279'
 resume_contact_address:         '48 Bridesburg Drive, Toronto Ontario'
 resume_header_intro: >
-  I am a passionate maker and aim to be a swiss army knife of skills.
-  I do not claim to know everything; but do claim to be able to learn anything.
   I am a licensed pilot, founder of uOttawa Rocketry and have been a garage tinker'er my entire life.
   I live with the philosophy <i>- Do what you can't</i>, and wish to work in an environment where
-  people get the license to step out of their comfort zone. This resume is a short story of the work
-  I have done, if you would like to hear more I would be happy to chat
+  people get the license to step out of their comfort zone.
+  I do not claim to know everything; but do claim to be able to learn anything.
+  This resume is a short story of the work I have done, if you would like to hear more I would be happy to chat
 
 # use 'yes' to display the email contact button,
 # 'no' to display an 'I'm not looking for work' message,
